CHANGES.txt - 2006-04-30
------------------------

CHANGES IN CUPS V1.2

	- Documentation updates (STR #1618, STR #1620, STR #1622,
	  STR #1637)
	- "make test" did not include the SNMP backend in the
	  test environment (STR #1625)
	- The EPM packaging files did not work (STR #1621)
	- "Use Default Configuration" inserted a broken
	  configuration file (STR #1624)
	- Redirects in the web interface did not always preserve
	  the encrypted status of a connection (STR #1603)
	- Added the Apple "pap" backend.
	- Added CUPS library to CUPS Image shared library
	  linkage to support Linux --as-needed linker option
	  (STR #1606)
	- Fixed support for --enable-pie (STR #1609)
	- The pdftops filter did not validate the length of the
	  encryption key (STR #1608)
	- Updated the Polish localization.
	- "Encryption Required" in the cupsd.conf file now only
	  requires encryption when the connection is not over the
	  loopback interface or domain socket.
	- Printer names containing "+" were not quoted properly in
	  the web interface (STR #1600)
	- The SNMP backend now reports the make and model in the
	  information string so that the auto-generated printer
	  name is more useful than just an IP address.


CHANGES IN CUPS V1.2rc3

	- The cups-lpd program always did reverse lookups on the
	  client address, which could be a performance problem.
	  Added a "-n" option to disable lookups.
	- When configured with SSL support, require encryption by
	  default when displaying the /admin location (STR #1592)
	- The next job ID was not computed correctly if the job
	  cache file got out of sync with the spool directory
	  (STR #1582)
	- The PNG image handling code used deprecated functions
	  from libpng (STR #1587)
	- Added a Polish translation (STR #1584, STR #1586)
	- More changes to the scheduler to improve battery life
	  on portable devices (STR #1583)
	- Changed the default log level for status messages back
	  to "DEBUG" to be consistent with CUPS 1.1.x (STR #1579)